# Youtan

./: .travis.yml  1.ll  README.md  Youtan.cabal  stack.yaml
app/: Main.hs
examples/BF/: Main.hs
examples/FJ/: AST.hs  Atom.hs  Eval.hs  I18n.hs  Lexical.hs  Main.hs  Parser.hs  Semantic.hs  Spec.hs  Syntax.hs  TypeChecker.hs
examples/LambdaCalculus/: Main.hs
examples/Parser/: JSON.hs
src/Youtan/: Utils.hs
src/Youtan/Compile/: ASM.hs  Codegen.hs
src/Youtan/Lexical/: Grammar.hs  Tokenizer.hs
src/Youtan/Regex/: DFM.hs  FM.hs  NDFM.hs  Operators.hs  OperatorsExtra.hs
src/Youtan/Syntax/: CFG.hs  Parser.hs
src/lexer/: DFM.hs  NDFM.hs
test/: Spec.hs
test/Youtan/Lexical/: TokenizerTest.hs
test/Youtan/Regex/: DFMTest.hs  FMTestCases.hs  NDFMTest.hs  OperatorsTest.hs
test/Youtan/Syntax/: CFGTest.hs
test/examples/Parser/: JSONTest.hs
