name:                Youtan
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/triplepointfive/Youtan#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
copyright:           2016 Ilya Smelkov
category:            language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Youtan.Regex.DFM
                     , Youtan.Regex.FM
                     , Youtan.Regex.NDFM
                     , Youtan.Regex.Operators
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , mtl
  default-language:    Haskell2010

executable Youtan-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , Youtan
  default-language:    Haskell2010

test-suite Youtan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , Youtan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  other-modules:       Youtan.Regex.NDFMTest
                     , Youtan.Regex.DFMTest
                     , Youtan.Regex.OperatorsTest
                     , Youtan.Regex.FMTestCases

source-repository head
  type:     git
  location: https://github.com/triplepointfive/Youtan
