name:                Youtan
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/triplepointfive/Youtan#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
copyright:           2016 Ilya Smelkov
category:            language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -rtsopts -with-rtsopts=-N -Wall
  exposed-modules:     Youtan.Lexical.Tokenizer
                     , Youtan.Regex.FM
                     , Youtan.Regex.DFM
                     , Youtan.Regex.NDFM
                     , Youtan.Regex.Operators
                     , Youtan.Regex.OperatorsExtra
                     , Youtan.Syntax.CFG
                     , Youtan.Syntax.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , template-haskell
  default-language:    Haskell2010
  other-modules:       Youtan.Utils

executable Youtan-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , containers
                     , Youtan
  default-language:    Haskell2010

test-suite Youtan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples
                     , test
                     , test/examples
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , Youtan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  other-modules:       Parser.JSON
                     , Parser.JSONTest
                     , Youtan.Lexical.TokenizerTest
                     , Youtan.Regex.NDFMTest
                     , Youtan.Regex.DFMTest
                     , Youtan.Regex.OperatorsTest
                     , Youtan.Regex.FMTestCases
                     , Youtan.Syntax.CFGTest

executable FJ
  hs-source-dirs:      examples/FJ
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , Youtan
  default-language:    Haskell2010

test-suite FJ-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples/FJ
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , mtl
                     , vector
                     , Youtan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  other-modules:       Atom
                     , Lexical
                     , Syntax
                     , Semantic

source-repository head
  type:     git
  location: https://github.com/triplepointfive/Youtan
